--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,5 +23,5 @@ en:
     save: 'Save'
     abort: 'Abort'
     completed: 'Completed'
-    no_task_content: 'Doubleclick to add a comment'
+    no_task_content: 'Click to add a comment'
     delete: 'Delete'
